facts: add eslint

--- a/facts/package.json
+++ b/facts/package.json
@@ -2,5 +2,8 @@
   "type": "module",
   "dependencies": {
     "puppeteer-core": "^20.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.44.0"
   }
 }
