--- a/facts/package.json
+++ b/facts/package.json
@@ -1,5 +1,10 @@
 {
   "type": "module",
+  "scripts": {
+    "step1": "echo 'see readme'",
+    "step2": "echo 'see readme'",
+    "step3": "node step3-puppeteer-to-json/puppeteer.js"
+  },
   "dependencies": {
     "puppeteer-core": "^20.8.0"
   },
