--- a/facts/package.json
+++ b/facts/package.json
@@ -6,7 +6,8 @@
     "step3": "node step3-puppeteer-to-json/puppeteer.js"
   },
   "dependencies": {
-    "puppeteer-core": "^20.8.0"
+    "puppeteer-core": "^20.8.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8.44.0"
