--- a/facts/.eslintrc.json
+++ b/facts/.eslintrc.json
@@ -3,6 +3,7 @@
   "extends": ["eslint:recommended"],
   "env": {
     "browser": true,
+    "node": true,
     "es2022": true
   },
   "parserOptions": {
