--- a/ui/.prettierrc
+++ b/ui/.prettierrc
@@ -3,6 +3,7 @@
   "trailingComma": "all",
   "printWidth": 100,
   "plugins": ["prettier-plugin-svelte"],
+  "quoteProps": "consistent",
   "pluginSearchDirs": ["."],
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
