ui: improve npm scripts and version script

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "vitest",
+    "format": "prettier --plugin-search-dir . --write .",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "test": "vitest",
+    "check-all": "svelte-kit sync && pnpm format && pnpm lint && pnpm test run && svelte-check --fail-on-warnings --tsconfig ./tsconfig.json",
+    "svelte-check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "build": "pnpm check-all && vite build",
+    "preview": "vite build && vite preview",
+    "version": "bash version.sh"
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
