--- a/facts/package.json
+++ b/facts/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "step1": "see readme",
     "step2": "node step2/prepareAllCards.js && pnpm --dir ../ui format",
-    "step4": "node step4-all-titles/excel-to-json.js"
+    "step3": "node step3/excel-to-json.js && pnpm --dir ../ui format"
   },
   "dependencies": {
     "puppeteer-core": "^20.8.0",
