ui: start constructing the big map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
     "Lionsgate",
     "marvelsnapzone",
     "Morbius",
+    "Pryde",
     "Quantumania",
+    "Sabretooth",
     "Ultron",
     "Wakanda"
   ]
