facts: add putting map together

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,16 +7,40 @@
     "*/.svelte-kit": true
   },
   "cSpell.words": [
+    "Arnim",
+    "Bucky",
+    "Coulson",
     "Deadpool",
+    "Deathstrike",
+    "Drax",
     "Elektra",
+    "Galactus",
+    "Gamora",
+    "Groot",
+    "Hela",
+    "Helicarrier",
+    "Inhumans",
+    "Killmonger",
+    "Korg",
     "Kraven",
     "Lionsgate",
     "marvelsnapzone",
     "Morbius",
+    "Mordo",
+    "Nakia",
+    "Negasonic",
+    "Okoye",
     "Pryde",
+    "Psylocke",
     "Quantumania",
+    "Quinjet",
+    "Ronan",
     "Sabretooth",
+    "Shuri",
+    "Thanos",
     "Ultron",
-    "Wakanda"
+    "Wakanda",
+    "Yellowjacket",
+    "Yondu"
   ]
 }
