add more into map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
   },
   "cSpell.words": [
     "Arnim",
+    "Attuma",
     "Bucky",
     "Coulson",
     "Deadpool",
@@ -20,14 +21,19 @@
     "Hela",
     "Helicarrier",
     "Inhumans",
+    "Kang",
     "Killmonger",
     "Korg",
     "Kraven",
     "Lionsgate",
+    "Magik",
     "marvelsnapzone",
+    "Mobius",
     "Morbius",
     "Mordo",
+    "Mysterio",
     "Nakia",
+    "Namor",
     "Negasonic",
     "Okoye",
     "Pryde",
