modify excel, add live action tv series

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,10 @@
     "Galactus",
     "Gamora",
     "Groot",
+    "Harkness",
     "Hela",
     "Helicarrier",
+    "Helstrom",
     "Inhumans",
     "Kang",
     "Killmonger",
