add "The Animated Series" to some titles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,14 @@
     "Arnim",
     "Attuma",
     "Bucky",
+    "Cerebro",
     "Coulson",
+    "Daken",
+    "Darkhawk",
     "Deadpool",
+    "Deathlok",
     "Deathstrike",
+    "Debrii",
     "Drax",
     "Elektra",
     "Galactus",
@@ -22,33 +27,48 @@
     "Hela",
     "Helicarrier",
     "Helstrom",
+    "Hulkbuster",
     "Inhumans",
     "Kang",
     "Killmonger",
+    "Klaw",
+    "Knull",
     "Korg",
     "Kraven",
     "Lionsgate",
     "Magik",
     "marvelsnapzone",
+    "Maximus",
+    "Minoru",
     "Mobius",
     "Morbius",
     "Mordo",
+    "Muramasa",
     "Mysterio",
     "Nakia",
     "Namor",
     "Negasonic",
+    "Nico",
     "Okoye",
     "Pryde",
     "Psylocke",
     "Quantumania",
     "Quinjet",
+    "Ravonna",
+    "Renslayer",
     "Ronan",
     "Sabretooth",
     "Shuri",
+    "Skrull",
+    "Stegron",
     "Thanos",
+    "Uatu",
     "Ultron",
+    "Vibranium",
     "Wakanda",
+    "Witchfire",
     "Yellowjacket",
-    "Yondu"
+    "Yondu",
+    "Zabu"
   ]
 }
