facts: use deno for step2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
   "search.exclude": {
     "*/.svelte-kit": true
   },
+  "deno.enablePaths": ["facts"],
   "cSpell.words": [
     "Arnim",
     "Attuma",
