--- a/facts/package.json
+++ b/facts/package.json
@@ -2,8 +2,9 @@
   "type": "module",
   "scripts": {
     "step1": "see readme",
-    "step2": "node step2/prepareAllCards.js && pnpm --dir ../ui format",
-    "step3": "node step3/prepareAllTitles.js && pnpm --dir ../ui format"
+    "step2": "deno run --allow-write step2/prepareAllCards.ts && pnpm --dir ../ui format",
+    "step3": "deno step3/prepareAllTitles.js && pnpm --dir ../ui format",
+    "one-time-script": "deno one-time-scripts/animated-tv-series/find-all-cards-in-all-animated-series"
   },
   "dependencies": {
     "puppeteer-core": "^20.8.0",
