--- a/facts/package.json
+++ b/facts/package.json
@@ -7,10 +7,7 @@
     "one-time-script": "deno one-time-scripts/animated-tv-series/find-all-cards-in-all-animated-series"
   },
   "dependencies": {
-    "puppeteer-core": "^20.8.0",
     "xlsx": "^0.18.5"
   },
-  "devDependencies": {
-    "eslint": "^8.44.0"
-  }
+  "devDependencies": {}
 }
