--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
   },
   // note: search exclude inherit files exlude, unless you you override them.
   "search.exclude": {
-    "*/.svelte-kit": true
+    "**/.svelte-kit": true,
+    "**/deprecated": true
   },
   "deno.enablePaths": ["facts"],
   "cSpell.words": [
