facts: manually improve data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "Harkness",
     "Hela",
     "Helicarrier",
+    "Hellcow",
     "Helstrom",
     "Hulkbuster",
     "Infinaut",
@@ -68,6 +69,7 @@
     "Sabretooth",
     "Shuri",
     "Skrull",
+    "Snowguard",
     "Stegron",
     "Thanos",
     "Uatu",
