--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,10 @@
 {
   "name": "MarvelSnap-in-movies",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye"
+  "build": { "dockerfile": "Dockerfile" },
+"features": {
+	"ghcr.io/devcontainers/features/git:1": {	}
+}
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
