--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,8 @@
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "build": { "dockerfile": "Dockerfile" },
 "features": {
-	"ghcr.io/devcontainers/features/git:1": {	}
+	"ghcr.io/devcontainers/features/git:1": {},
+	"ghcr.io/shyim/devcontainers-features/bun:0": {}
 }
 
   // Features to add to the dev container. More info: https://containers.dev/features.
