dev container: disable post start script to have one less interactive shell on start

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,6 @@
     "ghcr.io/devcontainers/features/git:1": {},
     "ghcr.io/shyim/devcontainers-features/bun:0": {}
   },
-  "postCreateCommand": "bash .devcontainer/postCreate.sh",
-  "postStartCommand": "bash .devcontainer/postStart.sh"
+  "postCreateCommand": "bash .devcontainer/postCreate.sh"
+  // "postStartCommand": "bash .devcontainer/postStart.sh",
 }
