--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,26 @@
     "ghcr.io/devcontainers/features/git:1": {},
     "ghcr.io/shyim/devcontainers-features/bun:0": {}
   },
-  "postCreateCommand": "bash .devcontainer/postCreate.sh"
+"postCreateCommand": "bash .devcontainer/postCreate.sh",
+"customizations": {
+	"vscode": {
+		"extensions": [
+			"lucax88x.codeacejumper",
+			"ryuta46.multi-command",
+			"kaiwood.better-line-select",
+			"streetsidesoftware.code-spell-checker",
+			"denoland.vscode-deno",
+			"ms-azuretools.vscode-docker",
+			"dbaeumer.vscode-eslint",
+			"GitHub.copilot",
+			"GitHub.copilot-chat",
+			"christian-kohler.path-intellisense",
+			"esbenp.prettier-vscode",
+			"dbankier.vscode-quick-select",
+			"timonwong.shellcheck",
+			"svelte.svelte-vscode"
+		]
+	}
+}
   // "postStartCommand": "bash .devcontainer/postStart.sh",
 }
