vercel.json: improve matching pattern for custom headers

--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "**/*.webp",
+      "source": "/card-images/:any.webp",
       "headers": [
         {
           "key": "Cache-Control",
