ui > vercel.json: change cache control header

--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -8,21 +8,8 @@
           "value": "public, max-age=1222111, stale-while-revalidate=1222111"
         },
         {
-          "key": "X-Greetings",
-          "value": "hello from vercel 2.json"
-        }
-      ]
-    },
-    {
-      "source": ":any/immutable/:any",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3222111, stale-while-revalidate=3222111"
-        },
-        {
-          "key": "X-Greetings",
-          "value": "hello from vercel 2.json"
+          "key": "X-Greetings-3",
+          "value": "hello from vercel.json"
         }
       ]
     }
