--- a/ui/package.json
+++ b/ui/package.json
@@ -6,14 +6,14 @@
     "format": "prettier . --write",
     "lint": "prettier . --check . && eslint .",
     "test": "vitest",
-    "check-all": "svelte-kit sync && bun format && bun lint && bun test run && svelte-check --fail-on-warnings --tsconfig ./tsconfig.json",
+    "check-all": "svelte-kit sync && pnpm format && pnpm lint && pnpm test run && svelte-check --fail-on-warnings --tsconfig ./tsconfig.json",
     "svelte-check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "build": "bun check-all && vite build",
+    "build": "pnpm check-all && vite build",
     "preview": "vite build && vite preview",
     "version": "bash version.sh"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-vercel": "^3.0.3",
     "@sveltejs/kit": "^1.27.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
