--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,6 @@
 {
   "name": "MarvelSnap-in-movies",
-  "image": "docker.io/denoland/deno:latest",
-  "features": {
-    "ghcr.io/devcontainers/features/git:1": {},
-    "ghcr.io/shyim/devcontainers-features/bun:0": {}
-  },
+  "build": { "dockerfile": "Dockerfile" },
   "postCreateCommand": "bash .devcontainer/postCreate.sh",
   "customizations": {
     "vscode": {
