--- a/ui/.npmrc
+++ b/ui/.npmrc
@@ -1,3 +1,3 @@
 engine-strict=true
 resolution-mode=highest
-use-node-version=18.18.2
+use-node-version=18.18.2 # this is pnpm spec, see https://pnpm.io/npmrc#use-node-version
