--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,15 @@
 # denoland/deno
 FROM denoland/deno:latest
 
-# install wget, git, pnpm
+# install global dependencies.
+# apt-get update and apt-get install should be in the same RUN command to ensure they're either both cached or both re-run.
+# packages should be sorted alphabetically to avoid duplicates. Use command palette "Sort Lines" to do it.
+# remove apt-get lists in the end to reduce image size. See https://docs.docker.com/develop/develop-images/instructions/#apt-get https://unix.stackexchange.com/questions/217369/clear-apt-get-list
 RUN apt-get update \
-  && apt-get install -y wget git \
-  && wget -qO- https://get.pnpm.io/install.sh | bash -
+  && apt-get install -y \
+  git \
+  wget \
+  && rm -rf /var/lib/apt/lists/*
+
+# install pnpm; use the script intended for Alpine: https://pnpm.io/installation#on-alpine-linux
+RUN wget -qO- https://get.pnpm.io/install.sh | ENV="$HOME/.bashrc" SHELL="$(which bash)" bash -
