dev container: specify container name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
   "name": "MarvelSnap-in-movies",
   "build": { "dockerfile": "Dockerfile" },
   "postCreateCommand": "bash .devcontainer/postCreate.sh",
+  "runArgs": ["--name", "marvel-snap-in-movies"],
   "customizations": {
     "vscode": {
       "extensions": [
