--- a/ui/.npmrc
+++ b/ui/.npmrc
@@ -1,3 +1,5 @@
 engine-strict=true
 resolution-mode=highest
-use-node-version=18.18.2 # this is pnpm spec, see https://pnpm.io/npmrc#use-node-version
+
+# let pnpm auto download a node version for this repo. It's, pnpm spec, see https://pnpm.io/npmrc#use-node-version. What I don't like is it must specify a exact version. When deployed to vercel, vercel will run `pnpm install` which will first auto download the pinnpoint version here, as opposed to using the node version vercel already has.
+# use-node-version=18.18.2
