vercel.json: don't deploy dev on each push

--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -1,4 +1,10 @@
 {
+  "git": {
+    "deploymentEnabled": {
+      "main": true,
+      "dev": false
+    }
+  },
   "headers": [
     {
       "source": "/card-images/:any.webp",
