--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -18,6 +18,9 @@
     "es2017": true,
     "node": true
   },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": ["off"]
+  },
   "overrides": [
     {
       "files": ["*.svelte"],
