--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,8 @@
     "format": "prettier . --write",
     "lint": "prettier . --check . && eslint .",
     "test": "vitest",
-    "check-all": "svelte-kit sync && pnpm format && pnpm lint && pnpm test run && svelte-check --fail-on-warnings --tsconfig ./tsconfig.json",
+    "check": "bash svelte-check.sh",
+    "check-all": "svelte-kit sync && pnpm format && pnpm lint && pnpm test run && pnpm check",
     "svelte-check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "build": "pnpm check-all && vite build",
     "preview": "vite build && vite preview",
