--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,16 @@
   "runArgs": ["--name", "marvel-snap-in-movies"], // give the container a clean name instead of something like "sneaky_trampoline"
   "postCreateCommand": "bash .devcontainer/post-create.sh",
   "postStartCommand": "bash .devcontainer/post-start.sh",
+  "portsAttributes": {
+    "9966": {
+      "label": "ui dev",
+      "requireLocalPort": true
+    },
+    "9977": {
+      "label": "ui preview",
+      "requireLocalPort": true
+    }
+  },
   "customizations": {
     "vscode": {
       "extensions": [
