--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
-  "name": "MarvelSnap-in-movies",
+  "name": "marvelsnap-on-screen",
   "build": { "dockerfile": "Dockerfile" },
-  "runArgs": ["--name", "marvel-snap-in-movies"], // give the container a clean name instead of something like "sneaky_trampoline"
+  "runArgs": ["--name", "marvelsnap-on-screen"], // give the container a clean name instead of something like "sneaky_trampoline"
   "postCreateCommand": "bash .devcontainer/post-create.sh",
   "postStartCommand": "bash .devcontainer/post-start.sh",
   "portsAttributes": {
