--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "a11y-no-static-element-interactions": "ignore"
   },
   "cSpell.words": [
+    "Annihilus",
     "Arnim",
     "Attuma",
     "Bucky",
