--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,7 @@
     "version": "bash version.sh"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^3.0.3",
+    "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/kit": "^1.27.6",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
