--- a/ui/package.json
+++ b/ui/package.json
@@ -30,5 +30,8 @@
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "highlight-words": "^1.2.2"
+  }
 }
