--- a/ui/package.json
+++ b/ui/package.json
@@ -14,8 +14,9 @@
     "version": "bash version.sh"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.27.6",
+    "@sveltejs/adapter-auto": "^3.0.1",
+    "@sveltejs/kit": "^2.0.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
@@ -27,8 +28,8 @@
     "svelte-check": "^3.6.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0"
   },
   "type": "module",
   "dependencies": {
