facts: update cards

--- a/facts/step1/allCardsFromUntappedGg.json
+++ b/facts/step1/allCardsFromUntappedGg.json
@@ -489,8 +489,8 @@
   {
     "id": 23,
     "defId": "BlackWidow",
-    "cost": 2,
-    "power": 1,
+    "cost": 3,
+    "power": 3,
     "name": "Black Widow",
     "description": "<b>On Reveal:</b> Add a Widow's Bite to your opponent's hand.",
     "attributes": {
@@ -2849,8 +2849,8 @@
   {
     "id": 132,
     "defId": "Maximus",
-    "cost": 3,
-    "power": 7,
+    "cost": 2,
+    "power": 6,
     "name": "Maximus",
     "description": "<b>On Reveal:</b> Your opponent\ndraws 2 cards.",
     "attributes": {
@@ -3794,7 +3794,7 @@
     "id": 174,
     "defId": "ProfessorX",
     "cost": 5,
-    "power": 3,
+    "power": 1,
     "name": "Professor X",
     "description": "<b>Ongoing:</b> Lock down this location. <i>(Cards can't be added, removed, etc.)</i>",
     "series": 4,
@@ -3839,7 +3839,7 @@
     "id": 176,
     "defId": "Punisher",
     "cost": 3,
-    "power": 2,
+    "power": 3,
     "name": "Punisher",
     "description": "<b>Ongoing:</b> +1 Power for each enemy card here.",
     "attributes": {
@@ -4156,7 +4156,7 @@
     "id": 192,
     "defId": "Ronan",
     "cost": 5,
-    "power": 3,
+    "power": 5,
     "name": "Ronan the Accuser",
     "description": "<b>Ongoing:</b> +2 Power for each card in your opponent's hand.",
     "attributes": {
@@ -5454,8 +5454,8 @@
   {
     "id": 252,
     "defId": "Viper",
-    "cost": 2,
-    "power": 3,
+    "cost": 3,
+    "power": 4,
     "name": "Viper",
     "description": "<b>On Reveal:</b> One of your other cards here switches sides.",
     "series": 6,
@@ -6458,8 +6458,8 @@
   {
     "id": 299,
     "defId": "WerewolfByNight",
-    "cost": 3,
-    "power": 3,
+    "cost": 4,
+    "power": 4,
     "name": "Werewolf By Night",
     "description": "After you play an <b>On Reveal</b> card at another location, move there to\ngain +2 Power.",
     "attributes": {
@@ -6484,7 +6484,7 @@
     "id": 300,
     "defId": "Gladiator",
     "cost": 3,
-    "power": 7,
+    "power": 8,
     "name": "Gladiator",
     "description": "<b>On Reveal:</b> Add a card from your opponent's deck to their side of this location. If it has less Power, destroy it.",
     "series": 8,
@@ -6504,7 +6504,7 @@
     "id": 301,
     "defId": "Martyr",
     "cost": 1,
-    "power": 4,
+    "power": 5,
     "name": "Martyr",
     "description": "At the end of the game, move to a location that LOSES you the\ngame. <i>(if possible)</i>",
     "series": 7,
@@ -6606,7 +6606,7 @@
         "AddedPower": 4
       }
     },
-    "series": 0,
+    "series": 7,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -6641,7 +6641,8 @@
         "name": "Ryan Kinnaird",
         "type": 4
       }
-    ]
+    ],
+    "collectible": true
   },
   {
     "id": 307,
