--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
   "type": "module",
   "dependencies": {
     "highlight-words": "^1.2.2",
+    "workbox-core": "^7.0.0",
     "workbox-recipes": "^7.0.0"
   }
 }
