vercel: update cache control header

--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -11,7 +11,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=1222111, stale-while-revalidate=1222111"
+          "value": "public, max-age=2111222, s-max-age=2111222, stale-while-revalidate=2111222"
         },
         {
           "key": "X-Greetings-3",
