--- a/facts/deno.json
+++ b/facts/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "step1": "echo 'see Maintain.md'",
+    "step1": "echo 'see maintain.md'",
     "step2": "deno run --allow-write step2/prepareAllCards.js && pnpm --dir ../ui format",
     "step3": "deno run --allow-read --allow-write --allow-net step3/downloadAllCardImages.ts && pwsh step3/compress-images.ps1",
     "step4": "deno run --allow-read --allow-write step4/prepareAllTitles.js && pnpm --dir ../ui format",
